@@ -12,6 +12,8 @@ Release 1.1 Start 27/02/2021
 - 07/04/2021
 06. svscan: run log supervise process with parent directory as argv2
 07. supervise: allow supervise for log process to run with three arguments
+- 15/04/2021
+08. minisvc: take into account /run filesystem when enabling, disabling service
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
